<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainActivity">

    <fragment
        android:id="@+id/MainActivity"
        android:name="com.example.dancestudiokisti.sectionsList.SectionsListActivity"
        android:label="@string/main_activity_label"
        tools:layout="@layout/list_sections_activity">
        <action
            android:id="@+id/action_MainActivity_to_SecondFragment"
            app:destination="@id/ListStudentsActivity" />
    </fragment>

    <fragment
        android:id="@+id/ListStudentsActivity"
        android:name="com.example.dancestudiokisti.list.StudentsListActivity"
        android:label="@string/second_screen_label"
        tools:layout="@layout/list_students_activity">
        <action
            android:id="@+id/action_ListStudentsActivity_to_StudentDetailsActivity"
            app:destination="@id/StudentDetailsActivity" />
    </fragment>

    <fragment
        android:id="@+id/StudentDetailsActivity"
        android:name="com.example.dancestudiokisti.details.StudentDetailsActivity"
        android:label="@string/third_screen_label"
        tools:layout="@layout/student_details_activity">
        <action
            android:id="@+id/action_StudentDetailsActivity_to_MainActivity"
            app:destination="@id/MainActivity" />
    </fragment>
</navigation>