<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".entry.EntryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="42dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/hello"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_info"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/border_buttons"
            android:gravity="center"
            android:text="@string/login"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_registration"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/border_buttons"
            android:gravity="center"
            android:text="@string/registration"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/no_internet_connection"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout >