<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".newSection.NewSectionFragment">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="24dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="56dp">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/border_dances"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/hint_section"
            android:inputType="textAutoComplete"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/image_picker"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/border_dances"
            android:gravity="center"
            android:hint="@string/hint_image"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/show_selected_image"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/border_dances"
            android:gravity="center"
            android:visibility="gone"
            android:contentDescription="@string/selected_image" />

        <Button
            android:id="@+id/save_section_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/border_buttons"
            android:text="@string/button_save_section"
            android:textColor="?android:attr/textColorPrimary"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/no_internet_connection"/>

</androidx.constraintlayout.widget.ConstraintLayout >