<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".newSection.NewSectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginTop="42dp"
            android:text="@string/log_in"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/edit_login"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/border_dances"
            android:gravity="center"
            android:hint="@string/hint_login"
            android:inputType="textAutoComplete"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/border_dances"
            android:gravity="center"
            android:hint="@string/hint_password"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/log_in_user"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/border_buttons"
            android:text="@string/log_in_user"
            android:textColor="?android:attr/textColorPrimary" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/no_internet_connection"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout >