<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".newStudent.NewStudentFragment">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="8dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:spinnerMode="dropdown"
            android:textColor="?android:attr/textColorPrimary" />

        <EditText
            android:id="@+id/edit_full_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/border_dances"
            android:hint="@string/hint_student"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/purchased_lessons"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/border_dances"
                android:hint="@string/hint_purchased_lessons"
                android:imeOptions="actionDone"
                android:inputType="textAutoComplete"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="?android:attr/textColorPrimary" />

            <CheckBox
                android:id="@+id/payment"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_dances"
                android:padding="8dp"
                android:textSize="14sp"
                android:text="@string/hint_payment" />

            <EditText
                android:id="@+id/balance_lessons"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="@drawable/border_dances"
                android:hint="@string/hint_balance"
                android:imeOptions="actionDone"
                android:inputType="textAutoComplete"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColor="?android:attr/textColorPrimary" />

        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_buttons"
            android:text="@string/button_save"
            android:textColor="?android:attr/textColorPrimary" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>