<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".details.StudentDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/border_dances"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/section_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            tools:text="Pole Dance" />

        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            tools:text="Мустафина Эльвира Ильясовна" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/border_buttons"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/number_of_lessons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginRight="8dp"
                tools:text="8" />

            <Button
                android:id="@+id/plus"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/border_buttons"
                android:text="@string/plus" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/number_of_lessons" />

        </LinearLayout>


        <CheckBox
            android:id="@+id/check_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/payment" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/balance_minus"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/border_buttons"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginRight="8dp"
                tools:text="4" />

            <Button
                android:id="@+id/balance_plus"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/border_buttons"
                android:text="@string/plus" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/balance" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_student_details_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/border_buttons"
                android:text="@string/button_save"
                android:textColor="?android:attr/textColorPrimary" />

            <Button
                android:id="@+id/delete_student_details_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:background="@drawable/border_buttons"
                android:text="@string/button_delete"
                android:textColor="?android:attr/textColorPrimary" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_baseline_send_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>